--- a/activities.html
+++ b/activities.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -57,42 +57,28 @@
             </div>
         </div>
     </nav>
-    <div class="main" style="padding-top: 75px">
+
+
+    <div class="mainActividades mt-5" id="main" style="align-content: center">
         <div class="container">
             <div class="row">
-                <div class="col-md-5th-1 col-sm-4 col-md-offset-0 col-sm-offset-2 text-center">
+                <div class="col-sm text-center">
                     <div class="service-box mt-5 mx-auto">
-                        <i class="fas fa-4x fa-file-alt sr-icons"></i>
-                        <h3 class="mb-3"><a href="double-degree-programs.html">Double degree programs</a></h3>
+                        <i class="fas fa-4x fa-chalkboard-teacher sr-icons"></i>
+                        <h3 class="mb-3"><a class="actividades" href="profesores.html">International<br>teachers</a>
+                        </h3>
                     </div>
                 </div>
-                <div class="col-md-5th-1 col-sm-4 text-center">
+                <div class="col-sm text-center">
                     <div class="service-box mt-5 mx-auto">
                         <i class="fas fa-4x fa-users sr-icons"></i>
-                        <h3 class="mb-3"><a href="top-management-programs.html">Top management programs</a></h3>
+                        <h3 class="mb-3"><a class="actividades" href="http://aiblat2019.org/#">International conferences</a></h3>
                     </div>
                 </div>
-                <div class="col-md-5th-1 col-sm-4 text-center">
+                <div class="col-sm text-center">
                     <div class="service-box mt-5 mx-auto">
-                        <i class="fas fa-4x fa-user-tie sr-icons"></i>
-                        <h3 class="mb-3"><a href="senior-management-programs.html">Senior management programs</a></h3>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col col-md-offset-5 text-center">
-                    <div class="service-box mt-5 mx-auto">
-                        <i class="fas fa-4x fa-chalkboard-teacher sr-icons"></i>
-                        <h3 class="mb-3"><a href="executive-certification-programs.html">Executive certification programs</a></h3>
-                    </div>
-                </div>
-                <div class="col col-md-offset-5 text-center">
-                    <div class="service-box mt-5 mx-auto">
-                        <i class="fas fa-4x fa-chalkboard-teacher sr-icons"></i>
-                        <h3 class="mb-3"><a href="index-e.html">
-                                Executive certification programs
-                                international</a>
-                        </h3>
+                        <i class="fas fa-4x fa-file-alt sr-icons"></i>
+                        <h3 class="mb-3"><a class="actividades" href="http://www.upb.edu/">News</a></h3>
                     </div>
                 </div>
             </div>
@@ -104,17 +90,17 @@
             <br><br>
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
-                    <h2 class="section-heading">Contact</h2>
+                    <h2 class="section-heading">Contacto</h2>
                     <hr class="my-4">
-                    <address class="mb-5">UPB Campus. Cochabamba, Bolivia.<br>Postgraduate building on the third floor,
-                        I internationalization office.<br>Av. Capitán Ustariz Km. 6,5.</address>
+                    <address class="mb-5">Campus UPB. Cochabamba, Bolivia.<br>Edificio postgrado en el tercer piso,
+                        I oficina de internacionalización.<br>Av. Capitán Ustariz Km. 6,5.</address>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 ml-auto text-center">
                     <i ngsReveal class="fa fas fa-address-card fa-3x mb-3 sr-contact"></i>
                     <p>Sergio García Agreda Ph.D.</p>
-                    <p>Director of postgraduate internationalization</p>
+                    <p>Director de internacionalización postgrado</p>
                 </div>
                 <div class="col-lg-4 ml-auto text-center">
                     <i ngsReveal class="fa fa-phone fa-3x mb-3 sr-contact"></i>
@@ -135,6 +121,7 @@
             </div>
         </div>
     </footer>
+
 </body>
 
 </html>
