--- a/index-e.html
+++ b/index-e.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="index.html">
+                        <a class="nav-link js-scroll-trigger" href="index-e.html">
                             <p class="elemento-navbar">Home</p>
                         </a>
                     </li>
@@ -45,18 +45,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="">
+                        <a class="nav-link js-scroll-trigger" href="memberships.html">
                             <p class="elemento-navbar">Memberships</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/actividades">
+                        <a class="nav-link js-scroll-trigger" href="activities.html">
                             <p class="elemento-navbar">Activities</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/contacto">
-                            <p class="elemento-navbar">Contact</p>
                         </a>
                     </li>
                 </ul>
