--- a/memberships.html
+++ b/memberships.html
@@ -13,10 +13,13 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a href="index.html" id="logo1" class="navbar-brand"><img
+            <a href="index-e.html" id="logo1" class="navbar-brand" style="display: none"><img
                     src="https://firebasestorage.googleapis.com/v0/b/inter-8999f.appspot.com/o/Marcas%20UPB-07.png?alt=media&token=f0be8581-a970-41d5-80a5-fc3a6d2df0a2"
+                    style="height: 60px;"></a>
+            <a href="index-e.html" id="logo2" class="navbar-brand"><img
+                    src="https://firebasestorage.googleapis.com/v0/b/inter-8999f.appspot.com/o/MARCAS.png?alt=media&token=750702a9-88ad-40bb-ba97-65468fc38d0e"
                     style="height: 60px;"></a>
             <button class="navbar-toggler navbar-toggler-right" (click)="toggleNavbar()" type="button"
                 data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
@@ -26,28 +29,28 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="index.html">
-                            <p class="elemento-navbar" style="color: rgb(41,47,109)">Inicio</p>
+                        <a class="nav-link js-scroll-trigger" href="index-e.html">
+                            <p class="elemento-navbar">Home</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="programas-internacionales.html">
-                            <p class="elemento-navbar" style="color: rgb(41,47,109)">Programas internacionales</p>
+                        <a class="nav-link js-scroll-trigger" href="international-programs.html">
+                            <p class="elemento-navbar">International programs</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="convenios.html">
-                            <p class="elemento-navbar" style="color: rgb(41,47,109)">Convenios</p>
+                        <a class="nav-link js-scroll-trigger" href="agreements.html">
+                            <p class="elemento-navbar">Agreements</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="convenios.html">
-                            <p class="elemento-navbar" style="color: rgb(41,47,109)">Membresías</p>
+                        <a class="nav-link js-scroll-trigger" href="memberships.html">
+                            <p class="elemento-navbar">Memberships</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="actividades.html">
-                            <p class="elemento-navbar" style="color: rgb(41,47,109)">Actividades</p>
+                        <a class="nav-link js-scroll-trigger" href="activities.html">
+                            <p class="elemento-navbar">Activities</p>
                         </a>
                     </li>
                 </ul>
@@ -55,7 +58,7 @@
         </div>
     </nav>
     <div class="container" style="align-content: center; margin-top: 95px">
-        <h2 class="my-4">Membresías</h2>
+        <h2 class="my-4">Memberships</h2>
         <br>
         <div class="row">
             <div class="col-md-4 col-centered">
@@ -64,11 +67,8 @@
             </div>
             <div class="col-md-8">
                 <h4>Academy of International Business</h4>
-                <p>La Academia de Negocios Internacionales (AIB) es la principal asociación de académicos y
-                    especialistas en el campo de los negocios internacionales. Establecida en 1959, hoy AIB es una
-                    corporación estadounidense sin fines de lucro.</p>
-                <a class="btn-list btn-primary" href="https://aib.msu.edu/">Averigua
-                    más</a>
+                <p>The International Business Academy (AIB) is the main association of academics and specialists in the field of international business. Established in 1959, today AIB is a non-profit American corporation.</p>
+                <a class="btn-list btn-primary" href="https://aib.msu.edu/">Learn more</a>
             </div>
         </div>
         <hr>
@@ -80,9 +80,9 @@
             </div>
             <div class="col-md-8">
                 <h4>International Association of University Presidents</h4>
-                <p>La Asociación Internacional de Presidentes de Universidades (IAUP) es una asociación de directores
-                    ejecutivos universitarios de las instituciones de educación superior de todo el mundo.</p>
-                <a class="btn-list btn-primary" href="https://www.iaup.org/">Averigua más</a>
+                <p>
+                    The International Association of University Presidents (IAUP) is an association of university executive directors of higher education institutions around the world.</p>
+                <a class="btn-list btn-primary" href="https://www.iaup.org/">Learn more</a>
             </div>
         </div>
         <hr>
@@ -94,10 +94,8 @@
             </div>
             <div class="col-md-8">
                 <h4>Bolivian American Chamber of Commerce</h4>
-                <p>La Bolivian American Chamber of Commerce (BACC), con sede en la ciudad de Nueva York, fue fundada en
-                    1983 por un grupo de destacados abogados, empresarios y ejecutivos corporativos bajo la dirección de
-                    Sergio Palacios de Hills, Betts Nash LLP</p>
-                <a class="btn-list btn-primary" href="http://www.bolivia-us.org/">Averigua más</a>
+                <p>The Bolivian American Chamber of Commerce (BACC), headquartered in New York City, was founded in 1983 by a group of prominent lawyers, entrepreneurs and corporate executives under the direction of Sergio Palacios de Hills, Betts Nash LLP</p>
+                <a class="btn-list btn-primary" href="http://www.bolivia-us.org/">Learn more</a>
             </div>
         </div>
         <hr>
@@ -109,11 +107,8 @@
             </div>
             <div class="col-md-8">
                 <h4>CLADEA</h4>
-                <p>El Consejo Latinoamericano de Escuelas de Administración (CLADEA) es una organización internacional
-                    sin fines de lucro, que se une a las instituciones de educación superior y otras organizaciones
-                    internacionales dedicadas a enseñar y la investigación en el campo de la administración de empresas.
-                </p>
-                <a class="btn-list btn-primary" href="https://www.cladea.org/es/">Averigua más</a>
+                <p>Is an international non-profit organization, which joins institutions of higher education and other international organizations dedicated to teaching and research in the field of business administration.</p>
+                <a class="btn-list btn-primary" href="https://www.cladea.org/es/">Learn more</a>
             </div>
         </div>
         <hr>
@@ -125,10 +120,8 @@
             </div>
             <div class="col-md-8">
                 <h4>ODAEE</h4>
-                <p>ODAEE, es una red internacional de instituciones educativas, que reúne a los profesionales del área
-                    para promover el intercambio de experiencias y que actúa como laboratorio de ideas innovadoras con
-                    el objetivo de promover proyectos de excelencia educativa.</p>
-                <a class="btn-list btn-primary" href="https://www.odaee.org/">Averigua más</a>
+                <p>It is an international network of educational institutions, which brings together professionals from the area to promote the exchange of experiences and which acts as a laboratory of innovative ideas with the aim of promoting projects of educational excellence.</p>
+                <a class="btn-list btn-primary" href="https://www.odaee.org/">Learn more</a>
             </div>
         </div>
     </div>
