--- a/teachers.html
+++ b/teachers.html
@@ -13,10 +13,13 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a href="/" id="logo1" class="navbar-brand"><img
+            <a href="index-e.html" id="logo1" class="navbar-brand" style="display: none"><img
                     src="https://firebasestorage.googleapis.com/v0/b/inter-8999f.appspot.com/o/Marcas%20UPB-07.png?alt=media&token=f0be8581-a970-41d5-80a5-fc3a6d2df0a2"
+                    style="height: 60px;"></a>
+            <a href="index-e.html" id="logo2" class="navbar-brand"><img
+                    src="https://firebasestorage.googleapis.com/v0/b/inter-8999f.appspot.com/o/MARCAS.png?alt=media&token=750702a9-88ad-40bb-ba97-65468fc38d0e"
                     style="height: 60px;"></a>
             <button class="navbar-toggler navbar-toggler-right" (click)="toggleNavbar()" type="button"
                 data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
@@ -26,28 +29,28 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="index.html">
-                            <p class="elemento-navbar" style="color: rgb(41,47,109)">Inicio</p>
+                        <a class="nav-link js-scroll-trigger" href="index-e.html">
+                            <p class="elemento-navbar">Home</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="programas-internacionales.html">
-                            <p class="elemento-navbar" style="color: rgb(41,47,109)">Programas internacionales</p>
+                        <a class="nav-link js-scroll-trigger" href="international-programs.html">
+                            <p class="elemento-navbar">International programs</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="convenios.html">
-                            <p class="elemento-navbar" style="color: rgb(41,47,109)">Convenios</p>
+                        <a class="nav-link js-scroll-trigger" href="agreements.html">
+                            <p class="elemento-navbar">Agreements</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="convenios.html">
-                            <p class="elemento-navbar" style="color: rgb(41,47,109)">Membresías</p>
+                        <a class="nav-link js-scroll-trigger" href="memberships.html">
+                            <p class="elemento-navbar">Memberships</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="actividades.html">
-                            <p class="elemento-navbar" style="color: rgb(41,47,109)">Actividades</p>
+                        <a class="nav-link js-scroll-trigger" href="activities.html">
+                            <p class="elemento-navbar">Activities</p>
                         </a>
                     </li>
                 </ul>
@@ -69,51 +72,24 @@
                                             style="width: 60%">
                                 </div>
                                 <div id="texto" class="col">
-                                    <p ALIGN="justify">En Marzo del 2018 recibimos la grata visita del Dr. Christopher
-                                        Mejía Argueta
-                                        Director de
-                                        MIT Supply Chain and Global Logistics Excellence (SCALE) Network for Latin
-                                        America y
-                                        Director de MIT Graduate Certificate in Logistics &amp;
-                                        Supply Chain Management (GCLOG), más información sobre él podrán encontrar en <a
+                                    <p ALIGN="justify"> 
+                                            In March of 2018 we received the pleasant visit of Dr. Christopher Mejía Argueta Director of MIT Supply Chain and Global Logistics Excellence (SCALE) Network for Latin America and Director of MIT Graduate Certificate in Logistics &amp; Supply Chain Management (GCLOG), more information about it can be found at
+                                        <a
                                             href="https://ctl.mit.edu/about/bio/christopher-mejia-argueta">https://ctl.mit.edu/about/bio/christopher-mejia-argueta</a>
                                     </p>
-                                    <p ALIGN="justify">Durante su Visita a la UPB, se realizó una conferencia sobre el
-                                        programa Graduate
-                                        Certificate in Logistics &amp; Supply Chain Management (GCLOG ) en la sala de
-                                        Video
-                                        conferencias del Campus Julio León Prado, se explicaron los beneficios
-                                        del programa como las oportunidades para los alumnos vinculados a postgrado y
-                                        graduados
-                                        hace menos de 2 años. Dicha conferencia fue grabada, por lo que si no tuvo la
-                                        oportunidad de asistir puede conectarse a través de Youtube
-                                        al link siguiente: <a
+                                    <p ALIGN="justify">
+                                            During his visit to the UPB, a conference was held on the Graduate Certificate in Logistics &amp; Supply Chain Management (GCLOG) in the video conference room of the Julio León Prado Campus, explained the benefits of the program as opportunities for students linked to postgraduate and graduate degrees less than 2 years ago. This conference was recorded, so if you did not have the opportunity to attend, you can connect via Youtube to the following link:
+                                        <a
                                             href="https://www.youtube.com/watch?v=-AhKjBXDkLY">https://www.youtube.com/watch?v=-AhKjBXDkLY</a>
                                     </p>
-                                    <p ALIGN="justify">También como actividad para la comunidad de Alumni de Cochabamba,
-                                        presentó el
-                                        libro de su
-                                        coautoría: Reaching 50 Million Nanostores: Retail Distribution in Emerging
-                                        Megacities by
-                                        Jan C. Fransoo (Author),‎ Edgar E. Blanco (Author),‎
-                                        Christopher Mejia-Argueta (Author). Este libro interesante libro, puede
-                                        adquirirse en el
-                                        link siguiente: <a
+                                    <p ALIGN="justify">
+                                            Also as an activity for the Alumni community of Cochabamba, he presented his co-authorship book: Reaching 50 Million Nanostores: Retail Distribution in Emerging Megacities by Jan C. Fransoo (Author), Edgar E. Blanco (Author), Christopher Mejia- Argueta (Author). This interesting book, can be purchased in the following link:
+                                        <a
                                             href="https://www.amazon.com/Reaching-Million-Nanostores-Distribution-Megacities/dp/1975742001">https://www.amazon.com/Reaching-Million-Nanostores-Distribution-Megaciti...</a>
                                     </p>
                                     <p>Sinopsis:</p>
-                                    <p ALIGN="justify">"Comprender el negocio de nanoalmacenes en los mercados
-                                        emergentes es fundamental
-                                        para la
-                                        estrategia de crecimiento de la mayoría de las empresas de bienes de consumo que
-                                        se
-                                        mueven rápidamente, y esta no ha sido una tarea fácil.
-                                        Este libro proporciona una comprensión clara de la complejidad y redes de
-                                        nanostores a
-                                        través de su rico material, incluyendo marcos y casos que son importantes y
-                                        útiles para
-                                        desarrollar una estrategia de distribución efectiva
-                                        para servir y ganar en este complejo mercado ". - Danillo G. Figueiredo, Dire
+                                    <p ALIGN="justify">
+                                            "Understanding the nano-warehouse business in emerging markets is central to the growth strategy of most fast-moving consumer goods companies, and this has not been an easy task." This book provides a clear understanding of the complexity and networks of nanostores through its rich material, including frameworks and cases that are important and useful to develop an effective distribution strategy to serve and win in this complex market. " - Danillo G. Figueiredo, Dire
                                     </p>
                                 </div>
                             </div>
@@ -134,14 +110,9 @@
                 <div class="field-items">
                     <div class="field-item even" property="content:encoded">
                         <div id="texto" class="col">
-                            <p ALIGN="justify">El día de ayer 3 de octubre, en la UPB de La Paz, se llevó a cabo el
-                                Conversatorio en
-                                Inglés
-                                conducido por el experto en Estrategia Global William Newburry Ph. D. que llegó de la
-                                Florida International university (FIU) como docente
-                                invitado de la Maestría de Negocios Digitales y para compartir este importante tema con
-                                los
-                                alumnos y exalumnos de la UPB, así como el público en general.</p>
+                            <p ALIGN="justify">
+                                    On October 3, at the UPB in La Paz, the Conversation in English was conducted by the Global Strategy expert William Newburry Ph. D. who arrived from the Florida International University (FIU) as a guest lecturer of the Master's Degree in Digital Business and to share this important topic with students and alumni of the UPB, as well as the general public.
+                            </p>
                         </div>
                         <p id="abajo" style="text-align: center;"><img class="img-fluid"
                                 src="http://www.upb.edu/sites/default/files/pictures/IMG_0958.JPG" alt=""></p>
