--- a/agreements.html
+++ b/agreements.html
@@ -13,50 +13,47 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-        <div class="container">
-            <a href="index-e.html" id="logo1" class="navbar-brand" style="display: none"><img
-                    src="https://firebasestorage.googleapis.com/v0/b/inter-8999f.appspot.com/o/Marcas%20UPB-07.png?alt=media&token=f0be8581-a970-41d5-80a5-fc3a6d2df0a2"
-                    style="height: 60px;"></a>
-            <a href="index-e.html" id="logo2" class="navbar-brand"><img
-                    src="https://firebasestorage.googleapis.com/v0/b/inter-8999f.appspot.com/o/MARCAS.png?alt=media&token=750702a9-88ad-40bb-ba97-65468fc38d0e"
-                    style="height: 60px;"></a>
-            <button class="navbar-toggler navbar-toggler-right" (click)="toggleNavbar()" type="button"
-                data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="index-e.html">
-                            <p class="elemento-navbar">Home</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="international-programs.html">
-                            <p class="elemento-navbar">International programs</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="agreements.html">
-                            <p class="elemento-navbar">Agreements</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="memberships.html">
-                            <p class="elemento-navbar">Memberships</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="activities.html">
-                            <p class="elemento-navbar">Activities</p>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
+      <div class="container">
+         <a href="index-e.html" id="logo1" class="navbar-brand"><img
+               src="https://firebasestorage.googleapis.com/v0/b/inter-8999f.appspot.com/o/Marcas%20UPB-07.png?alt=media&token=f0be8581-a970-41d5-80a5-fc3a6d2df0a2"
+               style="height: 60px;"></a>
+         <button class="navbar-toggler navbar-toggler-right" (click)="toggleNavbar()" type="button"
+            data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+               <li class="nav-item">
+                  <a class="nav-link js-scroll-trigger" href="index-e.html">
+                     <p class="elemento-navbar" style="color: rgb(41,47,109)">Inicio</p>
+                  </a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link js-scroll-trigger" href="international-programs.html">
+                     <p class="elemento-navbar" style="color: rgb(41,47,109)">International programs</p>
+                  </a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link js-scroll-trigger" href="agreements.html">
+                     <p class="elemento-navbar" style="color: rgb(41,47,109)">Agreements</p>
+                  </a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link js-scroll-trigger" href="memberships.html">
+                     <p class="elemento-navbar" style="color: rgb(41,47,109)">Memberships</p>
+                  </a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link js-scroll-trigger" href="activities.html">
+                     <p class="elemento-navbar" style="color: rgb(41,47,109)">Activities</p>
+                  </a>
+               </li>
+            </ul>
+         </div>
+      </div>
+   </nav>
     <div class="container" style="align-content: center">
         <h1 class="my-4">Agreements</h1>
         <h3>Double degree agreements</h3>
